--- a/index.html
+++ b/index.html
@@ -15,9 +15,18 @@
         <section id="telefone">
 
             <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+
+            seu navegador não é compative´l com isso!!
             
         </section>
         <section id="redes-sociais">
+            <a href="tela"><img src="imagens/imagens/logo-home.jpg" alt=""></a> <br>
+            <a href="tela"><img src="imagens/imagens/logo-youtube.jpg" alt=""></a> <br>
+            <a href="tela"><img src="imagens/imagens/logo-github.jpg" alt=""></a> <br>
+            <a href="tela"><img src="imagens/imagens/logo-instagram.jpg" alt=""></a> <br>
+            <a href="tela"><img src="imagens/imagens/logo-twitter.jpg" alt=""></a> <br>
+            <a href="tela"><img src="imagens/imagens/logo-facebook.jpg" alt=""></a> 
+           
 
         </section>
     </main>
