atualizei pagina instagran

--- a/instagran.html
+++ b/instagran.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=
     , initial-scale=1.0">
     <title>Instagran</title>
+    <link rel="stylesheet" href="estilo/social.css">
 </head>
 <body>
     <img src="imagens/imagens/tela-instagram.jpg" alt="Instagran">
-    <a href="https://www.instagram.com/gustavoguanabara/" target="_blank"></a>
+    <a href="https://www.instagram.com/gustavoguanabara/" target="_blank">Acesse</a>
     
 </body>
 </html>
