atualizei pagina twiter

--- a/twiter.html
+++ b/twiter.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <img src="imagens/imagens/tela-twitter.jpg" alt="Twiter">
-    <a href="https://www.instagram.com/gustavoguanabara/" target="_blank">Acesse</a>
+    <a href="https://twitter.com/sivaldolider" target="_blank">Acesse</a>
     
 </body>
 </html>
